# extenddb

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  SECURITY.md  requirements.txt
.agents/skills/extenddb/: SKILL.md
.github/: CODEOWNERS
.github/workflows/: clippy.yml  fmt.yml  integration.yml  test.yml
crates/auth/src/: cache_registry.rs  credential_cache.rs
crates/core/src/: serde_helpers.rs  throttle.rs
crates/engine/src/: batch_get_item.rs  batch_write_item.rs  create_table.rs  expected.rs  (+16 more)
crates/server/: Cargo.toml
crates/storage/: Cargo.toml
crates/storage-postgres/: Cargo.toml
devtools/: run-tests
docs/: differences-from-dynamodb.md  dynamodb-limits.md  getting-started.md  troubleshooting.md
docs/design/: 12-auth-authz-cache.md  README.md
docs/manuals/: 04-quickstart-setup-guide.md  05-admin-guide.md  06-developer-test-guide.md  08-install-linux.md  09-install-macos.md  11-deployment-guide.md
rfcs/: 0000-template.md  README.md
tests/: README.md  management_helpers.py  test_attribute_value_validation.py  test_batch_operations.py  test_cache_coherence.py  test_cli_lifecycle.py  test_console_cache_coherence.py  test_expression_error_prefix.py  test_expression_param_usage.py  test_query_scan.py  test_table_operations.py  test_transaction_operations.py  test_unused_expression_attribute_names.py
tests/python/: test_expressions.py  test_item_edge_cases.py  test_items.py  test_scan_edge_cases.py  test_streams.py  test_tables.py  test_tagging.py  test_transactions.py
tests/rust/: Cargo.toml
tests/rust/src/: lsi.rs  main.rs
(+75 files in other folders)
