# Copyright 2026 ExtendDB contributors
# SPDX-License-Identifier: Apache-2.0
#
# Rust integration tests for extenddb — mirrors the external Java test suite.
# This crate is NOT part of the workspace; it is a standalone test client
# (tenet 6: tests live outside the core).
[package]
name = "extenddb-integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

# Empty workspace table — this crate is intentionally NOT part of the
# product workspace (tenet 6: tests live outside the core).
[workspace]

# To override AWS SDK crates with a local checkout, create .cargo/config.toml:
#   [paths]
#   paths = ["../../../aws-sdk-rust/sdk/dynamodb", "../../../aws-sdk-rust/sdk/aws-config", ...]
# See https://doc.rust-lang.org/cargo/reference/overriding-dependencies.html#paths-overrides
[dependencies]
aws-sdk-dynamodb = { version = "1", default-features = false, features = ["behavior-version-latest", "rt-tokio", "default-https-client"] }
aws-config = { version = "1", default-features = false, features = ["behavior-version-latest", "rt-tokio", "default-https-client"] }
aws-credential-types = "1"
aws-smithy-types = "1"
aws-smithy-runtime-api = "1"
aws-smithy-http-client = { version = "1", features = ["rustls-ring"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12.15", features = ["rustls-tls", "json"], default-features = false }
